--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "description": "Личный проект «Мишка» от HTML Academy",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "0.1.x",
     "autoprefixer": "6.7.x",
     "browser-sync": "2.18.8",
     "gulp": "4.0.0",
     "gulp-plumber": "1.1.0",
     "gulp-postcss": "6.3.0",
-    "@htmlacademy/editorconfig-cli": "0.1.x",
-    "gulp-sass": "^4.0.1"
+    "gulp-sass": "^4.0.1",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "test": "editorconfig-cli",
